# ai-shadow-coach

./: .gitignore  API_KEYS.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MULTI_LLM_IMPLEMENTATION.md  PHASE1_CHECKLIST.md  QUICK_START.md  QUICK_START_MULTI_LLM.md  README.md  TESTING.md  TRANSCRIPTION_ISSUE.md  env.example  handoff.md  launch.bat  launch.ps1  requirements.txt  test_quick.ps1  test_quick.sh
audio_engine/: CMakeLists.txt
audio_engine/src/: main.cpp
backend/: audio_capture_proc.py  audio_dual.py  audio_engine.py  coach.py  config.py  engine_client.py  engine_stream.py  local_coach.py  main.py  models.py  prompt.py  requirements.txt  run_backend.bat  run_server.py  schema.py  state.py  transcriber.py  ui.html
backend/coaches/: __init__.py  base_coach.py  gemini_coach.py  ollama_coach.py
backend/providers/: gemini.py  groq.py  ollama.py
backend/ui/: app.html
engine/: CMakeLists.txt  README.md
engine/src/: main.cpp
ui/: index.html  package-lock.json  package.json
ui/src/: main.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs
